--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
-    font-family: "Urbanist", sans-serif;
-    background-color: #eff6ff;
-
+    font-family: "Urbanist", sans-serif !important;
 }
 
